Changelog
=========


1.2.5 (unreleased)
------------------

- Protect unused fields, so they are only visible for manager.
  [Julian Infanger]

- Implement a patched conversation view, which allows
  commenting on folderish types (i.e BlogEntry)
  [mathias.leimgruber]

- Remove old blog.tags.portlet from portlets.xml
  [mathias.leimgruber]

- Restore accidently removed image listing.
  [mathias.leimgruber]

- Restored info message if results are filtered on a criteria.
  [Julian Infanger]

- Use the same byline in blog entry used in overview.
  [Julian Infanger]

- Added new templates for blog and blog-entry. Requires Plone 4.
  [Julian Infanger]


1.2.4 (2012-10-10)
------------------

- Removed customized popupforms.js as we don't want to override Plone's
  current version. Our version contained a fix for comment form overlays,
  which is obsolete now, because p.a.discussion comments are no longer
  added with form overlays.
  [buchi]


1.2.3 (2012-08-20)
------------------

- Disable setting default page for Blog, BlogCategory and BlogEntry.
  Those types are not normal folders and setting the default page is therefore not common.
  [jone]

- Remove base_view from allowed BlogEntry views.
  [jone]

- Import ReferenceBrowserWidget from archetypes.referencebrowserwidget.
  [jone]


1.2.2 (2012-05-14)
------------------

- Use ftw.colorbox to show images in larger scales.
  [tschanzt]

- Fix Readme and use new test buildout config.
  [jone]


1.2.1 (2012-04-05)
------------------

- Use width 100% instead of auto (IE fix) in image listing.
  [mathias.leimgruber]


1.2 (2012-04-02)
----------------

- Added ftw.tabbedview based overview.
  [mathias.leimgruber]


1.1.7 (2012-03-12)
------------------

- Do not display tags-listing if there is no tag to list.
  [Julian Infanger]


1.1.6 (2012-03-05)
------------------

- Show categories the same way as tags in blog view.
  [Julian Infanger]

- Show plone.belowcontentbody in blog and entry views.
  [Julian Infanger]
