@@ -1,83 +1,0 @@
-<!-- Navigation -->
-<html
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:tal="http://xml.zope.org/namespaces/tal"
-    xmlns:metal="http://xml.zope.org/namespaces/metal"
-    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    tal:omit-tag="python: True"
-    i18n:domain="ftw.blog">
-
-    <div class="listingBar"
-         metal:define-macro="navigation"
-         tal:define="batch view/batch"
-         tal:condition="batch/multiple_pages">
-
-        <span class="previous"
-              tal:condition="batch/has_previous">
-            <a href=""
-               tal:attributes="href python:'%s?%s' % (here.absolute_url(), view.query_string(pagenumber=batch.previouspage));">
-                &laquo;
-                <span i18n:translate="batch_previous_x_items" tal:omit-tag="">
-                    Previous
-                    <span i18n:name="number" tal:omit-tag="" tal:content="batch/pagesize">n</span>
-                    items
-                </span>
-            </a>
-        </span>
-
-        <span class="next"
-              tal:condition="batch/has_next">
-            <a href=""
-               tal:attributes="href python:'%s?%s' % (here.absolute_url(), view.query_string(pagenumber=batch.nextpage));">
-                <span i18n:translate="batch_next_x_items" tal:omit-tag="">
-                    Next
-                    <span i18n:name="number" tal:omit-tag="" tal:content="batch/next_item_count">n</span>
-                    items
-                </span>
-                &raquo;
-            </a>
-        </span>
-
-        <!-- Link to first -->
-        <span tal:condition="batch/show_link_to_first">
-            <a href=""
-               tal:attributes="href python:'%s?%s' % (here.absolute_url(), view.query_string(pagenumber=1));">1</a>
-            <span tal:condition="batch/second_page_not_in_navlist"
-                  tal:omit-tag="">
-                ...
-            </span>
-        </span>
-
-        <!-- Pagelist with links to previous pages for quick navigation -->
-        <span tal:repeat="pagenumber batch/previous_pages"
-              tal:omit-tag="" >
-            <a href="" tal:content="pagenumber"
-               tal:attributes="href python:'%s?%s' % (here.absolute_url(), view.query_string(pagenumber=pagenumber));"/>
-        </span>
-
-        <!-- Current page -->
-        <span tal:condition="batch/navlist"
-              tal:omit-tag="">
-            [<span tal:content="batch/pagenumber" />]
-        </span>
-
-        <!-- Pagelist with links to next pages for quick navigation -->
-        <span tal:repeat="pagenumber batch/next_pages"
-              tal:omit-tag="" >
-            <a href="" tal:content="pagenumber"
-               tal:attributes="href python:'%s?%s' % (here.absolute_url(), view.query_string(pagenumber=pagenumber));"/>
-        </span>
-
-        <!-- Link to last -->
-        <span tal:condition="batch/show_link_to_last">
-            <span tal:condition="batch/before_last_page_not_in_navlist"
-                  tal:omit-tag="">
-                ...
-            </span>
-            <a href=""
-               tal:attributes="href python:'%s?%s' % (here.absolute_url(), view.query_string(pagenumber=batch.lastpage));"
-               tal:content="batch/lastpage">3457</a>
-        </span>
-    </div>
-
-</html>
